tests/error/assign_long_int.py
print 2000000000
print 0x3F1
print 0xFFFFFFFFFFFFFF
print 12
print 0132
print 0777777777777
